--- a/problems/test/style.css
+++ b/problems/test/style.css
@@ -6,18 +6,18 @@
     position: relative;
     width: 100%;
     height: 100%;
+    font-size: medium;
 }
-.problem {
+/* .problem {
     background-color: white;
     outline: 1px solid black;
     padding: 10px;
     width: 70%;
     margin: 0 auto;
-}
+} */
 .outline {
-    background-color: white;
-    outline: 1px solid black;
-    padding: 5px;
+    background-color: rgb(55, 65, 81);
+    padding: 15px;
     margin: 2px;
     margin-top: 15px;
     margin-bottom: 15px;
@@ -37,6 +37,7 @@
     height: 80px;
     flex-shrink: 0;
     margin: 5px;
+    user-select: none;
 }
 .bottom {
     display: flex;
@@ -44,20 +45,19 @@
     align-items: flex-end;
 }
 .bottom-left {
+    padding-left:6px;
     position: relative;
     text-align: left;
     margin-bottom: 0px;
 }
 .bottom-right {
+    padding-right: 6px;
     position: relative;
     text-align: right;
-    margin-bottom: 0px;
 }
-body {
+    
+/* body {
     background-color: lightgray;
     font-family: "Arial", sans-serif;
 }
-h2 {
-    margin: 0 auto;
-    text-align: center;
-}
+    */
