I should've split this into more commits lmao - JSDoc - renamed files to kebab-case - removed some html files in favor of code in pages for more modular code - created utils/html.js to help with the previous point - probably more things i forgot

--- a/src/templates/partials/problem.html
+++ b/src/templates/partials/problem.html
@@ -1,13 +1,13 @@
-<h2 class="text-3xl font-bold text-center mb-6" id="problemName"></h2>
+<h2 class="text-3xl font-bold text-center mb-6" id="problem-name"></h2>
         
 <div id="result"></div>
 <br>
 <div class="space-y-4 bg-gray-700 p-4 rounded-lg" id="problem-section">
-    <div id="problemStatement"></div>
+    <div id="problem-statement"></div>
     <h4 class="font-bold">INPUT FORMAT:</h4>
-    <span id="inputFormat"></span><br>
+    <span id="input-format"></span><br>
     <h4 class="font-bold">OUTPUT FORMAT:</h4>
-    <span id="outputFormat"></span><br>
+    <span id="output-format"></span><br>
 </div>
 <br>
 <p>Write code below:</p>
@@ -16,4 +16,4 @@
     <pre id="editor"></pre>
 </div><br>
 
-<button id="submitButton" class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600">Submit</button>
+<button id="submit-button" class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600">Submit</button>
