--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
     <title>Levis Judex by CodeJoint</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
+<style type="text/css" id="custom-page-zoom-css"></style>
 <body class="bg-gray-900 text-gray-100">
-    <div class="max-w-4xl mx-auto mt-10 p-6 bg-gray-800 shadow-lg rounded-xl text-center relative" id="main-section">
+    <div class="max-w-4xl mx-auto mt-10 p-6 bg-gray-800 shadow-lg rounded-xl" id="main-section">
     </div>
-    <style>.hoverUnderline:hover{text-decoration: underline;}</style>
+    <!-- <style>.hover-underline:hover{text-decoration: underline;}</style> -->
 </body>
 </html>
