--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -6,10 +6,7 @@
     <title>Levis Judex by CodeJoint</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
-<style type="text/css" id="custom-page-zoom-css"></style>
 <body class="bg-gray-900 text-gray-100">
-    <div class="max-w-4xl mx-auto mt-10 p-6 bg-gray-800 shadow-lg rounded-xl" id="main-section">
-    </div>
-    <!-- <style>.hover-underline:hover{text-decoration: underline;}</style> -->
+    <div class="max-w-4xl mx-auto mt-10 p-6 bg-gray-800 shadow-lg rounded-xl" id="main-section"></div>
 </body>
 </html>
