--- a/src/templates/partials/add-problem.html
+++ b/src/templates/partials/add-problem.html
@@ -1,1 +1,82 @@
-<p>TODO</p>
+<!-- <script src=></script> -->
+<!-- <script src="/admin/add-problem/add-problem.js"></script> -->
+<link href="/admin/add-problem/quill.css" rel="stylesheet" />
+
+<label for="problem-id-search">Enter Problem ID to Edit:</label>
+<input type="text" id="problem-id-search" placeholder="e.g. 3"
+    class="w-full text-lg p-2 rounded-lg bg-gray-700 text-gray-100 focus:outline-none focus:bg-gray-600"/>
+<button onclick="loadProblem()" 
+    class="text-lg p-2 mt-3 rounded-lg bg-blue-500 text-white hover:bg-blue-600 focus:outline-none">Load Problem</button>
+
+<hr class="my-4"/>
+
+<form id="problem-form" onsubmit="submitProblem(event)">
+    <div class="flex gap-4 mt-2">
+        <div class="w-1/2">
+            <label for="id" class="text-lg">Problem ID:</label>
+            <input type="text" id="id" required
+                class="text-lg p-2 rounded-lg bg-gray-700 text-gray-100 focus:outline-none focus:bg-gray-600"/>
+        </div>
+        <div class="w-1/2">
+            <label for="name" class="text-lg">Problem Name:</label>
+            <input type="text" id="name" required
+                class="text-lg p-2 rounded-lg bg-gray-700 text-gray-100 focus:outline-none focus:bg-gray-600"/>
+        </div>
+    </div>
+
+    <br>
+
+    <label class="text-lg">Problem Statement</label>
+    <div id="problem-statement" style="height: 200px;"></div>
+
+    <div class="flex gap-4 mt-2">
+        <div class="w-1/2">
+            <label class="text-lg">Input Format</label>
+            <div id="input-format" style="height: 100px;"></div>
+        </div>
+        <div class="w-1/2">
+            <label class="text-lg">Output Format</label>
+            <div id="output-format" style="height: 100px;"></div>
+        </div>
+    </div>
+
+    <div class="flex gap-4 mt-2">
+        <div class="w-1/2">
+            <label for="num-testcases" class="text-lg">Number of Testcases</label>
+            <input type="number" id="num-testcases" min="0" required onchange="fillDropdown()"
+                class="w-full text-lg p-2 rounded-lg bg-gray-700 text-gray-100 focus:outline-none focus:bg-gray-600"/>
+        </div>
+        <div class="w-1/2">
+            <label for="num-sample-testcases" class="text-lg">Number of Sample Testcases</label>
+            <input type="number" id="num-sample-testcases" min="0" required onchange="fillDropdown()"
+                class="w-full text-lg p-2 rounded-lg bg-gray-700 text-gray-100 focus:outline-none focus:bg-gray-600"/>
+        </div>
+    </div>
+
+    <label class="text-lg">Select Testcase</label>
+    <select id="testcase-selector" onchange="onSelectTestcase()" class="mt-5 rounded-lg bg-gray-700 text-gray-100"></select>
+
+    <div class="flex gap-4 mt-2">
+        <div class="w-1/2">
+            <label for="input-testcase-editor" class="text-lg">Input</label>
+            <textarea id="input-testcase-editor" rows="4" onchange="saveTestcase()" class="w-full mt-2 text-lg p-2 rounded-lg bg-gray-700 text-gray-100 focus:outline-none focus:bg-gray-600"></textarea>
+            <input type="file" onchange="loadTestcaseFromFile(event, 'input')" class="text-sm mt-2 text-gray-100"/>
+            <br>
+        </div>
+        
+        <div class="w-1/2">
+            <label for="output-testcase-editor" class="text-lg">Output</label>
+            <textarea id="output-testcase-editor" rows="4" onchange="saveTestcase()" class="w-full mt-2 text-lg p-2 rounded-lg bg-gray-700 text-gray-100 focus:outline-none focus:bg-gray-600"></textarea>
+            <input type="file" onchange="loadTestcaseFromFile(event, 'output')" class="text-sm mt-2 text-gray-100"/>
+            <br>
+        </div>
+    </div>
+
+    <!-- <label for="contest-id" class="text-lg mt-2 block">Contest ID (optional)</label>
+    <input type="text" id="contest-id"
+        class="w-full text-lg p-2 rounded-lg bg-gray-700 text-gray-100 focus:outline-none focus:bg-gray-600"/> -->
+
+    <button type="submit"
+        class="text-lg p-2 mt-3 rounded-lg bg-blue-500 text-white hover:bg-blue-600 focus:outline-none">Save Problem</button>
+        
+</form>
