--- a/src/templates/partials/admin.html
+++ b/src/templates/partials/admin.html
@@ -1,3 +1,3 @@
-<a href="/admin/add-admin" class="text-2xl text-center mb-6 hover:underline text-blue-400">Add admin</a><br>
-<a href="/admin/add-problem" class="text-2xl text-center mb-6 hover:underline text-blue-400">Add problem</a><br>
-<a href="/admin/add-contest" class="text-2xl text-center mb-6 hover:underline text-blue-400">Add contest</a>
+<a href="/admin/add-admin" class="text-2xl text-center mb-6 hover:underline text-blue-400">Add/remove admin</a><br>
+<a href="/admin/add-problem" class="text-2xl text-center mb-6 hover:underline text-blue-400">Add/edit problem</a><br>
+<a href="/admin/add-contest" class="text-2xl text-center mb-6 hover:underline text-blue-400">Add/edit contest</a>
