--- a/src/views/admin/add-problem.ejs
+++ b/src/views/admin/add-problem.ejs
@@ -1,10 +1,7 @@
-<!-- <script src=></script> -->
-<!-- <script src="/admin/add-problem/add-problem.js"></script> -->
 <link href="/admin/add-problem/quill.css" rel="stylesheet" />
 
-<label for="problem-id-search">Enter Problem ID to Edit:</label>
-<input type="text" id="problem-id-search" placeholder="e.g. 3"
-    class="w-full text-lg p-2 rounded-lg bg-gray-700 text-gray-100 focus:outline-none focus:bg-gray-600"/>
+<h1 class="text-4xl font-bold text-center mb-6 text-white">Admin</h1>
+<%- include("../partials/input", { id: "problem-id-search", label: "Enter Problem ID to Edit:", type: "text", placeholder: "e.g. 3" }) %>
 <button onclick="loadProblem()" 
     class="text-lg p-2 mt-3 rounded-lg bg-blue-500 text-white hover:bg-blue-600 focus:outline-none">Load Problem</button>
 
@@ -13,14 +10,10 @@
 <form id="problem-form" onsubmit="submitProblem(event)">
     <div class="flex gap-4 mt-2">
         <div class="w-1/2">
-            <label for="id" class="text-lg">Problem ID:</label>
-            <input type="text" id="id" required
-                class="text-lg p-2 rounded-lg bg-gray-700 text-gray-100 focus:outline-none focus:bg-gray-600"/>
+            <%- include("../partials/input", { id: "id", label: "Problem ID:", type: "text" }) %>
         </div>
         <div class="w-1/2">
-            <label for="name" class="text-lg">Problem Name:</label>
-            <input type="text" id="name" required
-                class="text-lg p-2 rounded-lg bg-gray-700 text-gray-100 focus:outline-none focus:bg-gray-600"/>
+            <%- include("../partials/input", { id: "name", label: "Problem Name:", type: "text" }) %>
         </div>
     </div>
 
@@ -76,7 +69,6 @@
     <input type="text" id="contest-id"
         class="w-full text-lg p-2 rounded-lg bg-gray-700 text-gray-100 focus:outline-none focus:bg-gray-600"/> -->
 
-    <button type="submit"
-        class="text-lg p-2 mt-3 rounded-lg bg-blue-500 text-white hover:bg-blue-600 focus:outline-none">Save Problem</button>
+    <%- include("../partials/button", { small: true, text: "Save Problem", id: "" }) %>
         
 </form>
