--- a/src/views/admin/admin.ejs
+++ b/src/views/admin/admin.ejs
@@ -1,3 +1,4 @@
+<h1 class="text-4xl font-bold text-center mb-6 text-white">Admin</h1>
 <a href="/admin/add-admin" class="text-2xl text-center mb-6 hover:underline text-blue-400">Add/remove admin</a><br>
 <a href="/admin/add-problem" class="text-2xl text-center mb-6 hover:underline text-blue-400">Add/edit problem</a><br>
 <a href="/admin/add-contest" class="text-2xl text-center mb-6 hover:underline text-blue-400">Add/edit contest</a>
