--- a/src/views/layout.ejs
+++ b/src/views/layout.ejs
@@ -2,23 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= typeof title != "undefined" ? title : "Levis Judex by CodeJoint" %></title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <% if (typeof head != "undefined") {%>
         <%- head %>
     <% }%>
 </head>
-<body class="bg-gray-900 text-gray-100">
+<body class="m-0 bg-gradient-to-br from-gray-900 via-gray-800 to-gray-900 text-gray-100 min-h-screen">
     <% if (typeof backArrow != "undefined") { %>
         <%- include("partials/back-arrow", backArrow) %>
     <% } %>
 
-    <%# This is such a disaster lmfao %>
     <div class="<% if (typeof mainSection != "undefined" && typeof mainSection.width != "undefined") { %>
         <%= mainSection.width %>
     <% } else { %>
         <%= "max-w-4xl" %>
-    <% } %> mx-auto mt-10 p-6 bg-gray-800 shadow-lg rounded-xl 
+    <% } %> mx-auto mt-10 p-8 bg-gray-800 bg-opacity-90 backdrop-blur-sm shadow-2xl rounded-2xl border border-gray-700 
     <% if (typeof mainSection != "undefined" && typeof mainSection.centered != "undefined" && mainSection.centered) { %>
         <%= "text-center relative" %>
     <% } %>" id="main-section">
