--- a/src/public/admin/add-problem/quill.css
+++ b/src/public/admin/add-problem/quill.css
@@ -18,14 +18,14 @@
 .ql-container {
     width: 100%;
     border-radius: 0.5rem;
-    background-color: #374151;
+    background-color: #4B5563;
     outline: none !important;
     border: none !important;
     box-shadow: none;
 }
 
 .ql-container:focus-within {
-    background-color: #4b5563;
+    background-color: #6b7280;
     outline: none;
 }
 
@@ -33,7 +33,7 @@
     font-size: 1.125rem;
     padding: 0.5rem;
     border-radius: 0.5rem;
-    background-color: #374151;
+    background-color: #4B5563;
     color: #d1d5db;
     outline: none;
     font-weight: 400;
@@ -41,20 +41,20 @@
 }
 
 .ql-editor:focus {
-    background-color: #4b5563;
+    background-color: #6b7280;
     outline: none;
 }
 
 .ql-toolbar {
     border-radius: 0.5rem;
-    background-color: #374151;
+    background-color: #4B5563;
     outline: none !important;
     border: none !important;
     margin-bottom: 3px;
 }
 
 .ql-toolbar:focus {
-    background-color: #4b5563;
+    background-color: #6b7280;
     outline: none !important;
     border: none !important;
 }
