switched from quill editor to sun editor

--- a/views/problem.ejs
+++ b/views/problem.ejs
@@ -47,3 +47,8 @@
 </div><br>
 
 <%- include("partials/button", { id: "submit-button", small: true, text: "Submit" }) %>
+
+<style>
+ul { list-style: disc; padding-left: 2.5rem; }
+ol { list-style: decimal; padding-left: 2.5rem; }
+</style>
